New Changes to css and html

--- a/index.html
+++ b/index.html
@@ -20,14 +20,13 @@
         <div class="profile">
           <img src="images/me.png" alt="diana profile picture">
           <h2>HOLA</h2>
-          <p>I am a visual designer with a strong passion in programming.</p>
-          <p>I love Ramen, burritos and yummy margaritas.</p>
+          <p class="intro"> I am a visual designer with a strong passion in programming. I love Ramen, burritos and yummy margaritas.</p>
         </div>
         <hr>
 
 
         <div class="skills">
-          <h2>My Skills.</h2>
+          <h2>My Skills</h2>
           <div class="skill-row">
             <img class="code-img" src="images/design-software.png" alt="design software icon">
 
@@ -40,8 +39,7 @@
 
 
             <h3>I am a working mother and loving wife.</h3>
-            <p>My son is 4 years old, we are currently living in San Francisco after moving from South Korea </p>
-            <p>were we reside due to my husband work with the United States Army. </p>
+            <p>My son is 4 years old, we are currently living in San Francisco after moving from South Korea were we reside due to my husband work with the United States Army. </p>
                   </div>
               </div>
           </div>
@@ -50,16 +48,17 @@
         <div class="contact-me">
           <h2>Get In Touch</h2>
           <h3>Email me or reach out using LinkedIn</h3>
-          <p>I am a lot of things, but I am able to do a lot and have achieved to be great at it!</p>
+          <p class="contact-message">I am a lot of things, but I am able to do a lot and have achieved to be great at it!</p>
           <a class="btn" href="mailto:dianav357@gmail.com">CONTACT ME</a>
         </div>
       </div>
+      <p>
 
-
+      </p>
       <div class="bottom-container">
         <a class="footer-link" href="https://www.linkedin.com/in/dianavl/">LinkedIn</a>
         <a class="footer-link" href="https://deenovarg30.myportfolio.com/work">Portfolio</a>
-        <p>© 2020 Diana Vargas.</p>
+        <p class="copyright">© 2020 Diana Vargas.</p>
       </div>
 
   </table>
