--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>♡Diana♡</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="/Users/dianavargas/Desktop/Web Development 2/HTML- Personal Site/CSS">
   <link rel="icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat:wght@100;400&family=Sacramento&display=swap" rel="stylesheet">
   </head>
