--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <img class="code-img" src="images/design-software.png" alt="design software icon">
 
             <h3>Graphic Illustrator for over 10 years. Experience in creating content for web and print.</h3>
-            <p>I am a lot of things, but I am able to do a lot and have achieved to be great at it!</p>
+            <p>I am great in everything I set my mind into.</p>
 
           </div>
           <div class="skill-row">
