--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 
             <h3>I am a working mother and loving wife.</h3>
-            <p>My son is 4 years old, we are currently living in San Francisco after moving from South Korea were we reside due to my husband work with the United States Army. </p>
+            <p>My son is 4 years old, we are currently living in San Francisco after moving from South Korea where we reside due to my husband work with the United States Army. </p>
                   </div>
               </div>
           </div>
