--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="contact-me">
           <h2>Get In Touch</h2>
           <h3>Email me or reach out using LinkedIn</h3>
-          <p class="contact-message">I am a lot of things, but I am able to do a lot and have achieved to be great at it!</p>
+          <p class="contact-message">What will I achieve next?!</p>
           <a class="btn" href="mailto:dianav357@gmail.com">CONTACT ME</a>
         </div>
       </div>
